Fix gantt chart alignment and scrolling issue

--- a/src/app/common/charts/gantt-chart/gantt-chart.component.scss
+++ b/src/app/common/charts/gantt-chart/gantt-chart.component.scss
@@ -1,10 +1,84 @@
-.content {
-  height: 600px;
-  padding: var(--spacing);
+.gantt-chart {
   display: flex;
-  flex-direction: column;
+
+  .content {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    height: 100%;
+
+    .data {
+      .schedule {
+        display: flex;
+        margin: var(--spacing) 0;
+        position: relative;
+        min-height: 50px;
+        box-sizing: border-box;
+
+        .schedule-item {
+          color: white;
+          padding: var(--spacing);
+          border-radius: 5px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          position: absolute;
+          box-sizing: border-box;
+          white-space: nowrap;
+        }
+      }
+    }
+
+    .heading {
+      display: flex;
+      background-color: white;
+      margin-top: 10px;
+      box-sizing: border-box;
+      border-top: 1px solid rgb(230, 230, 230);
+
+      .year-heading {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 0.7rem;
+        color: rgb(180, 180, 180);
+        padding: var(--spacing) 0;
+        box-sizing: border-box;
+
+        .month-heading {
+          display: flex;
+          flex-direction: row;
+          text-align: center;
+          box-sizing: border-box;
+
+          span {
+            font-size: 0.9rem;
+            color: rgb(109, 109, 109);
+          }
+        }
+      }
+    }
+  }
+
+  .expand-toggle {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+
+    mat-icon {
+      transition: all ease-out 200ms;
+    }
+
+    &.collapsed {
+      mat-icon {
+        transform: rotate(90deg);
+      }
+    }
+  }
 
   .divider {
+    border-top: 1px solid rgb(230, 230, 230);
     display: flex;
     flex-grow: 1;
 
@@ -23,74 +97,6 @@
           height: 100%;
         }
       }
-    }
-  }
-
-  .heading {
-    display: flex;
-    background-color: white;
-
-    .year-heading {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-size: 0.7rem;
-      color: rgb(180, 180, 180);
-
-      .month-heading {
-        display: flex;
-        flex-direction: row;
-        text-align: center;
-
-        span {
-          font-size: 0.9rem;
-          color: rgb(109, 109, 109);
-        }
-      }
-    }
-  }
-
-  .data {
-    height: 550px;
-    margin-top: -500px;
-    overflow-y: auto;
-    overflow-x: visible;
-    width: 100%;
-    max-height: 550px;
-
-    .schedule {
-      display: flex;
-      margin: var(--spacing) 0;
-      position: relative;
-      min-height: 50px;
-
-      .schedule-item {
-        color: white;
-        padding: var(--spacing);
-        border-radius: 5px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        position: absolute;
-        box-sizing: border-box;
-        white-space: nowrap;
-      }
-    }
-  }
-}
-
-.expand-toggle {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-  cursor: pointer;
-
-  mat-icon {
-    transition: all ease-out 200ms;
-  }
-
-  &.collapsed {
-    mat-icon {
-      transform: rotate(90deg);
     }
   }
 }
