--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,12 +119,14 @@ mat-form-field {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 5px;
+  height: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
+  border-radius: 5px;
 }
 
 /* Handle */
